--- a/wp-content/themes/portfolio/src/css/base/_typography.scss
+++ b/wp-content/themes/portfolio/src/css/base/_typography.scss
@@ -5,26 +5,50 @@ body {
 
 h1 {
   font-size: 2.8rem;
+
+  @media only screen and (max-width: 767.98px) {
+    font-size: 2.2rem;
+  }
 }
 
 h2 {
   font-size: 2.4rem;
+
+  @media only screen and (max-width: 767.98px) {
+    font-size: 2rem;
+  }
 }
 
 h3 {
   font-size: 2rem;
+
+  @media only screen and (max-width: 767.98px) {
+    font-size: 1.6rem;
+  }
 }
 
 h4 {
   font-size: 1.6rem;
+
+  @media only screen and (max-width: 767.98px) {
+    font-size: 1.4rem;
+  }
 }
 
 h5 {
   font-size: 1.4rem;
+
+  @media only screen and (max-width: 767.98px) {
+    font-size: 1.2rem;
+  }
 }
 
 h6 {
   font-size: 1.2rem;
+
+  @media only screen and (max-width: 767.98px) {
+    font-size: 1rem;
+  }
 }
 
 p {
