--- a/wp-content/themes/portfolio/src/css/components/_buttons.scss
+++ b/wp-content/themes/portfolio/src/css/components/_buttons.scss
@@ -44,6 +44,15 @@
       color: white;
       background-color: var(--secondary-color);
     }
+
+    &[disabled] {
+      background-color: #777777;
+      cursor: not-allowed;
+
+      &:hover {
+        background-color: #777777;
+      }
+    }
   }
 
   &.btn--outline {
@@ -61,6 +70,17 @@
     &.btn--secondary {
       color: var(--secondary-color);
       border-color: var(--secondary-color);
+    }
+
+    &[disabled] {
+      color: #777777;
+      border-color: #777777;
+      cursor: not-allowed;
+
+      &:hover {
+        color: #777777;
+        border-color: #777777;
+      }
     }
   }
 }
