feat: hiding and showing navbars depending on scrolling direction

--- a/wp-content/themes/portfolio/src/css/layout/_bottom-nav.scss
+++ b/wp-content/themes/portfolio/src/css/layout/_bottom-nav.scss
@@ -9,6 +9,15 @@
     width: 100%;
     background-color: var(--bg-color);
     z-index: 10000;
+    transition: 250ms all ease;
+  }
+
+  &.sticky {
+    transform: translateY(100%);
+  }
+
+  &.visible {
+    transform: translateY(0);
   }
 }
 
