--- a/wp-content/themes/portfolio/src/css/layout/_bottom-nav.scss
+++ b/wp-content/themes/portfolio/src/css/layout/_bottom-nav.scss
@@ -23,6 +23,7 @@
 
 .bottom-nav {
   padding: 1rem 0;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 
   &__list {
     display: flex;
@@ -33,11 +34,23 @@
   }
 
   &__item {
+    min-width: 50px;
 
     &-anchor {
       display: flex;
       flex-direction: column;
       align-items: center;
+
+      &::after {
+        content: none;
+      }
+
+      &:hover {
+
+        .icon {
+          filter: var(--icon-hover-brightness);
+        }
+      }
     }
 
     &-icon {
