--- a/wp-content/themes/portfolio/src/css/themes/_dark.scss
+++ b/wp-content/themes/portfolio/src/css/themes/_dark.scss
@@ -7,6 +7,7 @@
   --bg-color: #222222;
   --bg-depth-1:#292929;
   --bg-depth-2:#383838;
+  --icon-hover-brightness: brightness(8);
 
   .icon {
     filter: brightness(5);
