--- a/wp-content/themes/portfolio/src/css/layout/_bottom-nav.scss
+++ b/wp-content/themes/portfolio/src/css/layout/_bottom-nav.scss
@@ -22,7 +22,6 @@
 }
 
 .bottom-nav {
-  padding: 1rem 0;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 
   &__list {
@@ -34,12 +33,34 @@
   }
 
   &__item {
-    min-width: 50px;
+    position: relative;
+    width: 25%;
+
+    &::after {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 4px;
+      background-color: var(--primary-color);
+    }
+
+    &.active {
+
+      &::after {
+        content: '';
+      }
+    }
 
     &-anchor {
       display: flex;
       flex-direction: column;
       align-items: center;
+      padding: 1rem;
+
+      @media only screen and (max-width: 767.98px) {
+        padding: 0.5rem 1rem;
+      }
 
       &::after {
         content: none;
