fix(bottom-nav): better active page indication

--- a/wp-content/themes/portfolio/src/css/layout/_bottom-nav.scss
+++ b/wp-content/themes/portfolio/src/css/layout/_bottom-nav.scss
@@ -50,6 +50,14 @@
       &::after {
         content: '';
       }
+
+      .icon {
+        filter: var(--icon-hover-brightness);
+      }
+
+      .bottom-nav__item-text {
+        color: var(--heading-color);
+      }
     }
 
     &-anchor {
