--- a/wp-content/themes/portfolio/src/css/base/_utility-classes.scss
+++ b/wp-content/themes/portfolio/src/css/base/_utility-classes.scss
@@ -4,12 +4,15 @@
 
 .bg-z-0 {
   background-color: var(--bg-color);
+  transition: 250ms all ease;
 }
 
 .bg-z-1 {
   background-color: var(--bg-depth-1);
+  transition: 250ms all ease;
 }
 
 .bg-z-2 {
   background-color: var(--bg-depth-2);
+  transition: 250ms all ease;
 }
