--- a/wp-content/themes/portfolio/src/css/components/_links.scss
+++ b/wp-content/themes/portfolio/src/css/components/_links.scss
@@ -1,6 +1,7 @@
 a {
   position: relative;
-  color: inherit;
+  color: var(--text-color);
+  transition: 250ms all ease;
 
   &::after {
     position: absolute;
