--- a/wp-content/themes/portfolio/src/css/layout/_article.scss
+++ b/wp-content/themes/portfolio/src/css/layout/_article.scss
@@ -9,6 +9,10 @@
     max-width: 90vw;
   }
 
+  @media only screen and (max-width: 767.98px) {
+    max-width: calc(100% - 30px);
+  }
+
   &__heading {
     margin-bottom: 2rem;
   }
@@ -58,6 +62,10 @@
     font-size: 0.8rem;
     line-height: 1.6;
     margin-bottom: 4rem;
+
+    @media only screen and (max-width: 767.98px) {
+      margin-bottom: 2rem;
+    }
   }
 
   &__metadata-image-wrapper {
@@ -263,5 +271,9 @@
       color: inherit;
       text-decoration: none;
     }
+  }
+
+  :not(pre) > code[class*="language-"], pre[class*="language-"] {
+    background: #222428;
   }
 }
