--- a/wp-content/themes/portfolio/src/css/layout/_footer.scss
+++ b/wp-content/themes/portfolio/src/css/layout/_footer.scss
@@ -16,6 +16,7 @@
 
     @media only screen and (max-width: 767.98px) {
       grid-template-columns: 1fr;
+      grid-gap: 2em;
     }
   }
 
@@ -53,7 +54,7 @@
     }
 
     &-heading {
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       font-weight: 500;
     }
 
@@ -69,6 +70,10 @@
 
       &--socials {
         margin: 1rem 0 0 -1rem;
+
+        @media only screen and (max-width: 767.98px) {
+          margin: 2rem 0 0 -1rem;
+        }
       }
     }
 
