--- a/wp-content/themes/portfolio/src/css/layout/_section.scss
+++ b/wp-content/themes/portfolio/src/css/layout/_section.scss
@@ -1,5 +1,9 @@
 .section-wrapper {
   padding: 6rem 0;
+
+  @media only screen and (max-width: 767.98px) {
+    padding: 3rem 0;
+  }
 }
 
 .section {
@@ -10,7 +14,15 @@
     max-width: 90vw;
   }
 
+  @media only screen and (max-width: 767.98px) {
+    max-width: calc(100% - 30px);
+  }
+
   &__heading {
     margin-bottom: 2em;
+
+    @media only screen and (max-width: 767.98px) {
+      margin-bottom: 1em;
+    }
   }
 }
