--- a/wp-content/themes/portfolio/src/css/themes/_dark.scss
+++ b/wp-content/themes/portfolio/src/css/themes/_dark.scss
@@ -1,6 +1,6 @@
 [data-theme="dark"] {
-  --primary-color: #006eff;
-  --primary-color-hover: #2885ff;
+  --primary-color: #006efe;
+  --primary-color-hover: #2885fe;
   --secondary-color: #ffc400;
   --heading-color: #f0f0f0;
   --text-color: #cccccc;
