--- a/wp-content/themes/portfolio/src/css/themes/_light.scss
+++ b/wp-content/themes/portfolio/src/css/themes/_light.scss
@@ -1,6 +1,6 @@
 :root {
-  --primary-color: #006eff;
-  --primary-color-hover: #2885ff;
+  --primary-color: #006efe;
+  --primary-color-hover: #2885fe;
   --secondary-color: #ffc400;
   --heading-color: #1f1f1f;
   --text-color: #292929;
