feat(bottom-nav): improved active state visibility

--- a/wp-content/themes/portfolio/src/css/layout/_bottom-nav.scss
+++ b/wp-content/themes/portfolio/src/css/layout/_bottom-nav.scss
@@ -51,11 +51,12 @@
         content: '';
       }
 
-      .icon {
-        filter: var(--icon-hover-brightness);
+      .bottom-nav__item-icon.icon {
+        filter: var(--bottom-icon-brightness);
       }
 
       .bottom-nav__item-text {
+        font-weight: 600;
         color: var(--heading-color);
       }
     }
@@ -77,7 +78,7 @@
       &:hover {
 
         .icon {
-          filter: var(--icon-hover-brightness);
+          filter: var(--bottom-icon-brightness);
         }
       }
     }
