--- a/wp-content/themes/portfolio/src/css/themes/_light.scss
+++ b/wp-content/themes/portfolio/src/css/themes/_light.scss
@@ -8,7 +8,7 @@
   --bg-depth-1:#e8e8e8;
   --bg-depth-2: #dadada;
   --outline-button-color: #292929;
-  --icon-hover-brightness: brightness(2);
+  --bottom-icon-brightness: brightness(0);
 }
 
 .dark-theme {
