feat(article): added id anchors to article headings

--- a/wp-content/themes/portfolio/src/css/layout/_article.scss
+++ b/wp-content/themes/portfolio/src/css/layout/_article.scss
@@ -111,7 +111,16 @@
   &__content,
   .wysiwyg {
     h1, h2, h3, h4, h5, h6 {
+      padding-top: 3rem;
       margin-bottom: 2rem;
+
+      &:hover {
+
+        .heading-link {
+          visibility: visible;
+          opacity: 1;
+        }
+      }
     }
 
     p {
@@ -258,6 +267,25 @@
         color: white;
         text-decoration: none;
         background-size: 100% 100%;
+      }
+    }
+
+    .heading-link {
+      display: inline-block;
+      background: none;
+      visibility: hidden;
+      opacity: 0;
+      transition: 250ms all ease;
+
+      &::after {
+        content: none;
+      }
+
+      img {
+        display: inline-block;
+        width: 3rem;
+        margin-bottom: 0;
+        margin-left: 10px;
       }
     }
   }
