--- a/wp-content/themes/portfolio/src/css/layout/_article.scss
+++ b/wp-content/themes/portfolio/src/css/layout/_article.scss
@@ -113,6 +113,7 @@
     h1, h2, h3, h4, h5, h6 {
       padding-top: 3rem;
       margin-bottom: 2rem;
+      scroll-margin-top: 100px;
 
       &:hover {
 
@@ -140,7 +141,7 @@
     }
 
     figcaption {
-      padding: 0 1em;
+      padding: 1em;
       margin-top: -3rem;
       text-align: center;
       font-size: 0.8rem;
@@ -276,6 +277,10 @@
       visibility: hidden;
       opacity: 0;
       transition: 250ms all ease;
+
+      @media only screen and (max-width: 767.98px) {
+        display: none;
+      }
 
       &::after {
         content: none;
