--- a/wp-content/themes/portfolio/src/css/layout/_footer.scss
+++ b/wp-content/themes/portfolio/src/css/layout/_footer.scss
@@ -35,9 +35,12 @@
     &--logo {
       margin-right: auto;
 
-
       @media only screen and (max-width: 1199.98px) {
         margin-right: 0;
+      }
+
+      @media only screen and (max-width: 767.98px) {
+        margin-bottom: 2rem;
       }
     }
 
