--- a/wp-content/themes/portfolio/src/css/layout/_footer.scss
+++ b/wp-content/themes/portfolio/src/css/layout/_footer.scss
@@ -71,6 +71,10 @@
       max-width: 13rem;
       font-size: 0.9rem;
 
+      @media only screen and (max-width: 767.98px) {
+        max-width: none;
+      }
+
       &--socials {
         margin: 1rem 0 0 -1rem;
 
