feat(404): created 404 page

--- a/wp-content/themes/portfolio/src/css/components/_buttons.scss
+++ b/wp-content/themes/portfolio/src/css/components/_buttons.scss
@@ -1,9 +1,19 @@
 .btn-container {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
 
   &--center {
     justify-content: center;
+  }
+
+  > * {
+    margin-right: 1em;
+    margin-bottom: 1em;
+
+    &:last-child {
+      margin: 0;
+    }
   }
 }
 
