--- a/wp-content/themes/portfolio/src/css/components/_links.scss
+++ b/wp-content/themes/portfolio/src/css/components/_links.scss
@@ -35,7 +35,7 @@ a {
   }
 }
 
-.tag:not(pre > *) {
+.tag:not(.token) {
   display: inline-block;
   margin: 0 1em 1em 0;
   background-color: var(--primary-color);
