fix: fixed wrong article link underlines

--- a/wp-content/themes/portfolio/src/css/layout/_article.scss
+++ b/wp-content/themes/portfolio/src/css/layout/_article.scss
@@ -261,6 +261,10 @@
         text-decoration: none;
         background-size: 100% 100%;
       }
+
+      &::after {
+        content: none;
+      }
     }
 
     .heading-link {
