--- a/wp-content/themes/portfolio/src/css/layout/_article.scss
+++ b/wp-content/themes/portfolio/src/css/layout/_article.scss
@@ -237,7 +237,7 @@
       position: relative;
       padding: 0.2em 0.4em;
       font-size: inherit;
-      word-break: break-all;
+      word-break: break-word;
       background-image: linear-gradient(to bottom, #C0D6F3 0%, #C0D6F3 100%);
       background-repeat: no-repeat;
       background-size: 100% 100%;
@@ -268,6 +268,7 @@
     }
 
     .heading-link {
+      position: absolute;
       display: inline-block;
       background: none;
       visibility: hidden;
@@ -284,7 +285,7 @@
 
       img {
         display: inline-block;
-        width: 3rem;
+        width: 1em;
         margin-bottom: 0;
         margin-left: 10px;
       }
